<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.javamoney.moneta</groupId>
		<artifactId>moneta-convert-parent</artifactId>
		<version>1.4.5</version>
	</parent>
	<artifactId>moneta-convert-ecb</artifactId>
	<packaging>jar</packaging>
	<dependencies>
		<dependency>
			<groupId>org.javamoney.moneta</groupId>
			<artifactId>moneta-core</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>org.javamoney.moneta</groupId>
			<artifactId>moneta-convert</artifactId>
			<version>${project.version}</version>
		</dependency>
		<!-- OSGI support -->
		<dependency>
			<groupId>org.osgi</groupId>
			<artifactId>osgi.core</artifactId>
			<scope>provided</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.osgi</groupId>
			<artifactId>osgi.annotation</artifactId>
			<scope>provided</scope>
			<optional>true</optional>
		</dependency>
	</dependencies>
	<name>Moneta Currency Conversion - ECB Provider</name>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<release>9</release>
				</configuration>
				<executions>
					<execution>
						<id>default-compile</id>
						<configuration>
							<!-- compile everything to ensure module-info contains right entries -->
							<!-- required when JAVA_HOME is JDK 8 or below -->
							<jdkToolchain>
								<version>9</version>
							</jdkToolchain>
							<release>9</release>
						</configuration>
					</execution>
					<execution>
						<id>base-compile</id>
						<goals>
							<goal>compile</goal>
						</goals>
						<!-- recompile everything for target VM except the module-info.java -->
						<configuration>
							<release>${maven.compiler.release}</release>
							<excludes>
								<exclude>module-info.java</exclude>
							</excludes>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M7</version>
				<configuration>
					<argLine>--illegal-access=permit</argLine>
					<argLine>--add-opens org.javamoney.moneta.convert.ecb/org.javamoney.moneta.convert.ecb=ALL-UNNAMED</argLine>
					<argLine>-Dillegal-access=permit</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
